Taslist overflow issue fixed

--- a/forms-flow-web/src/components/ServiceFlow/ServiceFlow.scss
+++ b/forms-flow-web/src/components/ServiceFlow/ServiceFlow.scss
@@ -150,6 +150,7 @@
 
 .font-size-16{
   font-size: 16px;
+  overflow-wrap: break-word;
 }
 
 .actionable {
